--- a/MyPotatso.conf
+++ b/MyPotatso.conf
@@ -3626,30 +3626,30 @@ ruleSets:
   - DOMAIN-SUFFIX,zhaochina.com,REJECT
 - name: KEYWORD
   rules:
-  - DOMAIN-KEYWORD,aka,Proxy
-  - DOMAIN-KEYWORD,amazon,Proxy
-  - DOMAIN-KEYWORD,appledaily,Proxy
-  - DOMAIN-KEYWORD,blogspot,Proxy
-  - DOMAIN-KEYWORD,fbcdn,Proxy
-  - DOMAIN-KEYWORD,facebook,Proxy
-  - DOMAIN-KEYWORD,gmail,Proxy
-  - DOMAIN-KEYWORD,google,Proxy
-  - DOMAIN-KEYWORD,gstatic,Proxy
-  - DOMAIN-KEYWORD,instagram,Proxy
-  - DOMAIN-KEYWORD,mzstatic,Proxy
-  - DOMAIN-KEYWORD,spotify,Proxy
-  - DOMAIN-KEYWORD,twitter,Proxy
-  - DOMAIN-KEYWORD,twimg,Proxy
-  - DOMAIN-KEYWORD,youtube,Proxy
-  - DOMAIN-KEYWORD,360buy,DIRECT
-  - DOMAIN-KEYWORD,alipay,DIRECT
-  - DOMAIN-KEYWORD,baidupcs,DIRECT
-  - DOMAIN-KEYWORD,ads,REJECT
-  - DOMAIN-KEYWORD,admob,REJECT
-  - DOMAIN-KEYWORD,analysis,REJECT
-  - DOMAIN-KEYWORD,dnserror,REJECT
-  - DOMAIN-KEYWORD,openx,REJECT
-  - DOMAIN-KEYWORD,ssp,REJECT
+  - DOMAIN-MATCH,aka,Proxy
+  - DOMAIN-MATCH,amazon,Proxy
+  - DOMAIN-MATCH,appledaily,Proxy
+  - DOMAIN-MATCH,blogspot,Proxy
+  - DOMAIN-MATCH,fbcdn,Proxy
+  - DOMAIN-MATCH,facebook,Proxy
+  - DOMAIN-MATCH,gmail,Proxy
+  - DOMAIN-MATCH,google,Proxy
+  - DOMAIN-MATCH,gstatic,Proxy
+  - DOMAIN-MATCH,instagram,Proxy
+  - DOMAIN-MATCH,mzstatic,Proxy
+  - DOMAIN-MATCH,spotify,Proxy
+  - DOMAIN-MATCH,twitter,Proxy
+  - DOMAIN-MATCH,twimg,Proxy
+  - DOMAIN-MATCH,youtube,Proxy
+  - DOMAIN-MATCH,360buy,DIRECT
+  - DOMAIN-MATCH,alipay,DIRECT
+  - DOMAIN-MATCH,baidupcs,DIRECT
+  - DOMAIN-MATCH,ads,REJECT
+  - DOMAIN-MATCH,admob,REJECT
+  - DOMAIN-MATCH,analysis,REJECT
+  - DOMAIN-MATCH,dnserror,REJECT
+  - DOMAIN-MATCH,openx,REJECT
+  - DOMAIN-MATCH,ssp,REJECT
 - name: Cameron Add
   rules:
   - DOMAIN-SUFFIX,upsight-api.com,PROXY
